--- a/libs/ui-core-storybook/src/lib/welcome.mdx
+++ b/libs/ui-core-storybook/src/lib/welcome.mdx
@@ -1,14 +1,17 @@
 import { Canvas, Meta } from '@storybook/addon-docs';
-import * as AngularButtonStories from './angular-button.stories';
-import * as LitButtonStories from './lit-button.stories';
+import * as LitStories from './lit-button.stories';
+import * as AngularStories from './angular-button.stories';
 
-<Meta of={AngularButtonStories} />
+<Meta title='Welcome' />
 
 # Hello There!
 
 This is a storybook for the `ui-core` library.
 
-<Canvas story={AngularButtonStories.Default} />
+# Angular
 
-<Canvas story={LitButtonStories.Default} />
-```
+<Canvas of={AngularStories.Default} meta={AngularStories} />
+
+# Lit
+
+<Canvas of={LitStories.Default} meta={LitStories} />
