--- a/libs/ui-core-storybook/src/lib/welcome.mdx
+++ b/libs/ui-core-storybook/src/lib/welcome.mdx
@@ -2,7 +2,7 @@ import { Canvas, Meta } from '@storybook/addon-docs';
 import * as LitStories from './lit-button.stories';
 import * as AngularStories from './angular-button.stories';
 
-<Meta title="Welcome" />
+<Meta title='Welcome' />
 
 # Hello There!
 
